Add friend link network section

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           <a href="#labs">实验矩阵</a>
           <a href="#telemetry">实时遥测</a>
           <a href="#timeline">地球更新史</a>
+          <a href="#alliances">友链星港</a>
           <a href="#contact">联络站</a>
         </nav>
       </div>
@@ -111,6 +112,25 @@
             </p>
           </header>
           <div class="timeline" id="timeline-stream" aria-live="polite"></div>
+        </div>
+      </section>
+
+      <section id="alliances" class="section" aria-labelledby="alliances-title">
+        <div class="inner">
+          <header class="section__header">
+            <p class="section__eyebrow">Alliance Network</p>
+            <h2 id="alliances-title">友链星港：与我们同频的体验实验室</h2>
+            <p>
+              这里记录着与 Earth Online 长期共振的创作者与研究者。他们在各自的宇宙里推进设计、技术与叙事的边界，欢迎登舰拜访。
+            </p>
+          </header>
+          <div class="alliance-grid" id="alliance-grid" aria-live="polite"></div>
+          <div class="alliance-cta">
+            <a class="button button--ghost" href="friends/index.html">
+              进入完整友链档案
+              <span aria-hidden="true">↗</span>
+            </a>
+          </div>
         </div>
       </section>
 
