Refine friends hub information architecture

--- a/friends/index.html
+++ b/friends/index.html
@@ -47,7 +47,7 @@
 
       <section class="section section--alt" aria-label="友链列表">
         <div class="inner">
-          <div class="alliance-grid" id="friend-grid" aria-live="polite"></div>
+          <div class="friend-network" id="friend-grid" aria-live="polite"></div>
         </div>
       </section>
     </main>
