Add AI interpreter debrief to homepage

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           <a href="#hero">开场</a>
           <a href="#mission">使命域</a>
           <a href="#labs">实验矩阵</a>
+          <a href="#interpreters">AI 解释器</a>
           <a href="#telemetry">实时遥测</a>
           <a href="#timeline">地球更新史</a>
           <a href="#alliances">友链星港</a>
@@ -86,6 +87,42 @@
           </div>
           <p id="lab-summary" class="browser-summary"></p>
           <div class="lab-grid" id="lab-grid" aria-live="polite"></div>
+        </div>
+      </section>
+
+      <section
+        id="interpreters"
+        class="section"
+        aria-labelledby="interpreters-title"
+      >
+        <div class="inner">
+          <header class="section__header">
+            <p class="section__eyebrow">Interpreter Duo</p>
+            <h2 id="interpreters-title">OpenAI × CloseAI 解释器联合审议</h2>
+            <p>
+              两位解释器将以各自的对齐目标、策略模型与约束清单对同一问题进行推理：为什么当前无法让你的所有代码仓库安全互通。
+              结论由合议庭记录，并生成后续行动建议。
+            </p>
+          </header>
+          <div class="interpreter-layout">
+            <div
+              class="interpreter-grid"
+              id="interpreter-grid"
+              aria-live="polite"
+              aria-label="解释器画像"
+            ></div>
+            <div class="interpreter-panel">
+              <div class="interpreter-log" id="interpreter-log" aria-live="polite">
+                <h3 id="interpreter-log-title">联合推理执行轨迹</h3>
+              </div>
+              <div
+                class="interpreter-summary"
+                id="interpreter-summary"
+                aria-live="polite"
+                aria-labelledby="interpreter-summary-title"
+              ></div>
+            </div>
+          </div>
         </div>
       </section>
 
