--- a/index.html
+++ b/index.html
@@ -15,20 +15,35 @@
   <body>
     <header class="site-header">
       <div class="inner header__inner">
-        <div class="brand" aria-label="Earth Online 实验室标识">
+        <div class="brand" aria-label="Earth Online 实验室标识" data-i18n-attr="aria-label:brand.ariaLabel">
           <span class="brand__title">Earth Online</span>
-          <span class="brand__subtitle">体验实验室 · Planetary Experience Lab</span>
+          <span class="brand__subtitle" data-i18n="brand.subtitle">体验实验室 · Planetary Experience Lab</span>
         </div>
-        <nav class="site-nav" aria-label="主导航">
-          <a href="#hero">开场</a>
-          <a href="#mission">使命域</a>
-          <a href="#labs">实验矩阵</a>
-          <a href="#interpreters">AI 解释器</a>
-          <a href="#telemetry">实时遥测</a>
-          <a href="#timeline">地球更新史</a>
-          <a href="#alliances">友链星港</a>
-          <a href="#contact">联络站</a>
+        <nav
+          class="site-nav"
+          aria-label="主导航"
+          data-i18n-attr="aria-label:nav.ariaLabel"
+        >
+          <a href="#hero" data-i18n="nav.hero">开场</a>
+          <a href="#mission" data-i18n="nav.mission">使命域</a>
+          <a href="#labs" data-i18n="nav.labs">实验矩阵</a>
+          <a href="#interpreters" data-i18n="nav.interpreters">AI 解释器</a>
+          <a href="#telemetry" data-i18n="nav.telemetry">实时遥测</a>
+          <a href="#timeline" data-i18n="nav.timeline">地球更新史</a>
+          <a href="#alliances" data-i18n="nav.alliances">友链星港</a>
+          <a href="#contact" data-i18n="nav.contact">联络站</a>
         </nav>
+        <div class="header__actions">
+          <button
+            class="language-toggle"
+            id="language-toggle"
+            type="button"
+            aria-label="切换语言"
+            data-i18n-attr="aria-label:language.toggleLabel"
+          >
+            EN
+          </button>
+        </div>
       </div>
     </header>
 
@@ -38,14 +53,21 @@
         <div class="hero__overlay">
           <div class="inner hero__content">
             <div class="hero__text">
-              <p class="hero__eyebrow">Planetary Experience Interface</p>
-              <h1 id="hero-title">将你的主页重构为地球 Online 体验实验室</h1>
-              <p class="hero__description">
+              <p class="hero__eyebrow" data-i18n="hero.eyebrow">Planetary Experience Interface</p>
+              <h1 id="hero-title" data-i18n="hero.title">将你的主页重构为地球 Online 体验实验室</h1>
+              <p class="hero__description" data-i18n="hero.description">
                 这是一座实时进化的地球体验操作系统：我们以 WebGL 星球引擎、时序故事矩阵与协作协议，将所有研究、原型与伙伴网络汇聚于一个全新的空间界面，邀请你随时登舰探索。
               </p>
-              <div class="hero__cta" role="group" aria-label="快速入口">
-                <a class="button" href="#labs">进入实验矩阵</a>
-                <a class="button button--ghost" href="public/resume/index.html">查看履历网络</a>
+              <div
+                class="hero__cta"
+                role="group"
+                aria-label="快速入口"
+                data-i18n-attr="aria-label:hero.ctaAria"
+              >
+                <a class="button" href="#labs" data-i18n="hero.primaryCta">进入实验矩阵</a>
+                <a class="button button--ghost" href="public/resume/index.html" data-i18n="hero.secondaryCta"
+                  >查看履历网络</a
+                >
               </div>
             </div>
             <div class="hero__stats" id="hero-stats" aria-live="polite"></div>
@@ -56,9 +78,9 @@
       <section id="mission" class="section" aria-labelledby="mission-title">
         <div class="inner">
           <header class="section__header">
-            <p class="section__eyebrow">Mission Quadrants</p>
-            <h2 id="mission-title">四大任务域，重塑地球体验</h2>
-            <p>
+            <p class="section__eyebrow" data-i18n="mission.eyebrow">Mission Quadrants</p>
+            <h2 id="mission-title" data-i18n="mission.title">四大任务域，重塑地球体验</h2>
+            <p data-i18n="mission.intro">
               Earth Online 把复杂的地球议题拆分为可执行的任务域——从生态治理到认知接口，以实验驱动的方式为专家团队提供共同语言。
             </p>
           </header>
@@ -69,21 +91,28 @@
       <section id="labs" class="section section--alt" aria-labelledby="labs-title">
         <div class="inner">
           <header class="section__header">
-            <p class="section__eyebrow">Immersive Lab Matrix</p>
-            <h2 id="labs-title">实验矩阵：穿梭于 360° 地球体验</h2>
-            <p>
+            <p class="section__eyebrow" data-i18n="labs.eyebrow">Immersive Lab Matrix</p>
+            <h2 id="labs-title" data-i18n="labs.title">实验矩阵：穿梭于 360° 地球体验</h2>
+            <p data-i18n="labs.intro">
               每个实验都链接到真实的 Demo、研究或运营资产。点开任意模块即可即刻进入交互式场景，或通过顶部筛选快速定位你的兴趣领域。
             </p>
           </header>
           <div class="lab-controls" role="search">
-            <label class="visually-hidden" for="lab-search">搜索实验</label>
+            <label class="visually-hidden" for="lab-search" data-i18n="labs.searchLabel">搜索实验</label>
             <input
               id="lab-search"
               type="search"
               placeholder="输入关键词（例如 WebGL、气候、协作）"
+              data-i18n-attr="placeholder:labs.searchPlaceholder"
               aria-describedby="lab-summary"
             />
-            <div class="filter-group" id="lab-filters" role="group" aria-label="实验过滤"></div>
+            <div
+              class="filter-group"
+              id="lab-filters"
+              role="group"
+              aria-label="实验过滤"
+              data-i18n-attr="aria-label:labs.filterAria"
+            ></div>
           </div>
           <p id="lab-summary" class="browser-summary"></p>
           <div class="lab-grid" id="lab-grid" aria-live="polite"></div>
@@ -97,9 +126,9 @@
       >
         <div class="inner">
           <header class="section__header">
-            <p class="section__eyebrow">Interpreter Duo</p>
-            <h2 id="interpreters-title">OpenAI × CloseAI 解释器联合审议</h2>
-            <p>
+            <p class="section__eyebrow" data-i18n="interpreters.eyebrow">Interpreter Duo</p>
+            <h2 id="interpreters-title" data-i18n="interpreters.title">OpenAI × CloseAI 解释器联合审议</h2>
+            <p data-i18n="interpreters.intro">
               两位解释器将以各自的对齐目标、策略模型与约束清单对同一问题进行推理：为什么当前无法让你的所有代码仓库安全互通。
               结论由合议庭记录，并生成后续行动建议。
             </p>
@@ -113,7 +142,7 @@
             ></div>
             <div class="interpreter-panel">
               <div class="interpreter-log" id="interpreter-log" aria-live="polite">
-                <h3 id="interpreter-log-title">联合推理执行轨迹</h3>
+                <h3 id="interpreter-log-title" data-i18n="interpreters.logTitle">联合推理执行轨迹</h3>
               </div>
               <div
                 class="interpreter-summary"
@@ -129,9 +158,9 @@
       <section id="telemetry" class="section" aria-labelledby="telemetry-title">
         <div class="inner">
           <header class="section__header">
-            <p class="section__eyebrow">Live Telemetry</p>
-            <h2 id="telemetry-title">实时遥测：地球 Online 的运行指标</h2>
-            <p>
+            <p class="section__eyebrow" data-i18n="telemetry.eyebrow">Live Telemetry</p>
+            <h2 id="telemetry-title" data-i18n="telemetry.title">实时遥测：地球 Online 的运行指标</h2>
+            <p data-i18n="telemetry.intro">
               我们监控体验实验室的能量流、协作频率与系统稳定性。数据基于真实资产数量与动态模拟，让你看到平台的持续跃迁。
             </p>
           </header>
@@ -142,9 +171,9 @@
       <section id="timeline" class="section section--alt" aria-labelledby="timeline-title">
         <div class="inner">
           <header class="section__header">
-            <p class="section__eyebrow">Evolution Timeline</p>
-            <h2 id="timeline-title">地球 Online 演进时间线</h2>
-            <p>
+            <p class="section__eyebrow" data-i18n="timeline.eyebrow">Evolution Timeline</p>
+            <h2 id="timeline-title" data-i18n="timeline.title">地球 Online 演进时间线</h2>
+            <p data-i18n="timeline.intro">
               自首个原型诞生以来，我们不断吸收来自代码、研究与社区的能量。时间线记录关键跃迁，帮助你了解实验室的起源与未来方向。
             </p>
           </header>
@@ -155,15 +184,15 @@
       <section id="alliances" class="section" aria-labelledby="alliances-title">
         <div class="inner">
           <header class="section__header">
-            <p class="section__eyebrow">Alliance Network</p>
-            <h2 id="alliances-title">友链星港：与我们同频的体验实验室</h2>
-            <p>
+            <p class="section__eyebrow" data-i18n="alliances.eyebrow">Alliance Network</p>
+            <h2 id="alliances-title" data-i18n="alliances.title">友链星港：与我们同频的体验实验室</h2>
+            <p data-i18n="alliances.intro">
               这里记录着与 Earth Online 长期共振的创作者与研究者。他们在各自的宇宙里推进设计、技术与叙事的边界，欢迎登舰拜访。
             </p>
           </header>
           <div class="alliance-grid" id="alliance-grid" aria-live="polite"></div>
           <div class="alliance-cta">
-            <a class="button button--ghost" href="friends/index.html">
+            <a class="button button--ghost" href="friends/index.html" data-i18n="alliances.cta">
               进入完整友链档案
               <span aria-hidden="true">↗</span>
             </a>
@@ -174,9 +203,9 @@
       <section id="contact" class="section" aria-labelledby="contact-title">
         <div class="inner">
           <header class="section__header">
-            <p class="section__eyebrow">Docking Station</p>
-            <h2 id="contact-title">准备好与 Earth Online 对接吗？</h2>
-            <p>
+            <p class="section__eyebrow" data-i18n="contact.eyebrow">Docking Station</p>
+            <h2 id="contact-title" data-i18n="contact.title">准备好与 Earth Online 对接吗？</h2>
+            <p data-i18n="contact.intro">
               无论你来自设计工程、系统科学还是生态治理，我们都期待与你共创新的地球体验模式。以下资源帮助你快速与实验室建立连接。
             </p>
           </header>
@@ -187,8 +216,8 @@
 
     <footer class="site-footer">
       <div class="inner">
-        <p>© 2024 Earth Online Experience Lab · Powered by Aman Sharma</p>
-        <p class="footer-note">欢迎 fork、引用或将实验室成果嵌入你的宇宙级项目。</p>
+        <p data-i18n="footer.credit">© 2024 Earth Online Experience Lab · Powered by Aman Sharma</p>
+        <p class="footer-note" data-i18n="footer.note">欢迎 fork、引用或将实验室成果嵌入你的宇宙级项目。</p>
       </div>
     </footer>
 
