Refine futuristic UI and expose live metrics

--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
           <span class="brand__title">Earth Online</span>
           <span class="brand__subtitle" data-i18n="brand.subtitle">体验实验室 · Planetary Experience Lab</span>
         </div>
+        <div
+          class="header__status"
+          id="header-status"
+          role="list"
+          aria-label="地球 Online 当前指标"
+          data-i18n-attr="aria-label:header.statusAria"
+        ></div>
         <nav
           class="site-nav"
           id="site-nav"
@@ -62,7 +69,7 @@
                 >
               </div>
             </div>
-            <div class="hero__stats" id="hero-stats" aria-live="polite"></div>
+            <div class="hero__stats" id="hero-stats" aria-live="polite" role="list"></div>
           </div>
         </div>
       </section>
